@@ -1,5 +1,6 @@
  1.0b (November 11, 2014)
 ==========================
+Fix for crash when you allow your second in command to fight a battle
 Use sim_opponents.csv and vanilla behavior when Starsector+ is installed
 
  1.0 (November 11, 2014)
